<resources>
    <string name="app_name">Random-Generator</string>
    <string name="action_settings">Settings</string>
    <string name="dialog_title_create_generator">create generator</string>
    <string name="name_dialog_text_chooser">generator 1</string>

    <string name="choose_random_button_name">Choose random value</string>
    <string name="value_heading_name">value</string>
    <string name="weighting_heading_name">weighting</string>
    <string name="value_dialog_text">Enter value</string>
    <string name="weighting_dialog_text">Enter weighting</string>
    <string name="dialog_title_create_value">Add value</string>

    <string name="empty_string_warning">Please Enter something!</string>
    <string name="not_valid_value_warning">Please make sure to Enter Numbers only!</string>

    <string-array name="randomGenerator">
        <item>dice</item>
        <item>loaded dice</item>
        <item>lotto</item>
        <item>First Date Location</item>
        <item>traffic accidents Germany 2017</item>
    </string-array>
    <string name="cancel">cancel</string>
    <string name="ok" translatable="false">ok</string>
    <string name="delete_item_message">Do you really want to delete this Item?</string>
    <string name="autofill_hint_number">only numbers</string>
    <string name="autofill_hint_text">only text</string>
    <string name="action_about">About</string>
    <string name="action_about_text">
        This App is a single Person programmed Application.\n\n
        I will develop this App in the Future.\n
        Planned Features are:\n
        - a choosing Animation\n
        - Settings like Sorting, Weighting in Percentage, Animation\n
        - a Drop Down for Generator Types\n
            -> Image Generators for random Image Selection\n
        - Drag and Drop Items\n
        ... and more\n\n
        The Code for this App is free visible on Github:\n
        https://github.com/lucianojung/Random_Generator_App_With_Weighting\n
        For Feedback send an Email at:\n
        LucianoJ@posteo.de :)
    </string>
    <string name="dialog_title_generator">generator name:</string>
    <string name="dialog_title_value">value:</string>
    <string name="dialog_title_weighting">weighting:</string>
    <string name="null_pointer_warning">Missing ressource! Please restart the app</string>
    <string name="default_generator">random generator</string>
    <string name="value_type_heading">value type:</string>
    <string name="valuetype_prompt">Choose a valuetype</string>
    <string-array name="default_values_lotto">
        <item>6 right + super number</item>
        <item>6 right</item>
        <item>5 right + super number</item>
        <item>5 right</item>
        <item>4 right + super number</item>
        <item>4 right</item>
        <item>3 right + super number</item>
        <item>3 right</item>
        <item>2 right + super number</item>
        <item>blank</item>
    </string-array>
    <string-array name="default_values_first_date">
        <item>cinema</item>
        <item>museum</item>
        <item>concert</item>
        <item>bar</item>
        <item>café</item>
        <item>restaurant</item>
        <item>barbecue</item>
        <item>picknick</item>
        <item>zoo</item>
        <item>minigolf</item>
        <item>climbing</item>
    </string-array>
    <string-array name="default_values_traffic_accident">
        <item>car</item>
        <item>truck</item>
        <item>motorbike</item>
        <item>bus</item>
        <item>bike</item>
        <item>walking</item>
        <item>other</item>
    </string-array>
    <string-array name="valuetype_array">
        <item>String</item>
        <item>Number</item>
        <item>Letter</item>
        <item>Dice</item>
        <item>Coin</item>
        <item>Color</item>
        <item>Image</item>
    </string-array>
</resources>
